[tool.poetry]
name = "payments"
version = "0.1.0"
description = ""
authors = ["Yan Petrunin <ipetrunin@webiomed.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.2"
sqlalchemy = "^2.0.48"
asyncpg = "^0.31.0"
pydantic-settings = "^2.13.1"
alembic = "^1.18.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
